[tool.poetry]
name = "tucows"
version = "0.1.0"
description = ""
authors = ["Júlio César Batista <julio.batista@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
lxml = "^4.9.3"
psycopg = {extras = ["binary"], version = "^3.1.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
